update delete cardview, green color updates, clean up